--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Grow: Papas, pizzas y cocteles deliciosos en un ambiente acogedor. Disfruta de una experiencia única con nuestra variada oferta.">
     <title>Inicio-Grow</title>
     <link rel="shortcut icon" href="./assets/img/bar.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
