--- a/pages/bebidas.html
+++ b/pages/bebidas.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Refresca tu paladar con nuestras gran variedad de bebidas refrescantes. Tenemos la opción perfecta para satisfacer tus gustos y disfrutar al máximo">
     <title>Bebidas-Grow</title>
     <link rel="shortcut icon" href="./assets/img/bar.ico" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
