--- a/pages/papas.html
+++ b/pages/papas.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Descubre nuestras pizzas artesanales con ingredientes frescos y sabrosos en el bar Grow. Disfruta de una explosión de sabores en cada rebanada y déjate cautivar por nuestra variedad de opciones">
+    <meta name="keywords" content="bar, tragos, cocteles, pizzas, papas fritas, bebidas, musica, gastronomía">
     <title>Nuestras Papas-Grow</title>
     <link rel="shortcut icon" href="./assets/img/bar.ico" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
