--- a/pages/cocteles.html
+++ b/pages/cocteles.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Sumérgete en el mundo de los cocteles en el bar Grow. Nuestro barman crea mezclas únicas que deleitarán tus sentidos. Descubre nuevos sabores y vive una experiencia única.">
+    <meta name="keywords" content="bar, tragos, cocteles, pizzas, papas fritas, bebidas, musica, gastronomía">
     <title>Cocteles-Grow</title>
     <link rel="shortcut icon" href="./assets/img/bar.ico" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
