--- a/pages/bebidas.html
+++ b/pages/bebidas.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Refresca tu paladar con nuestras gran variedad de bebidas refrescantes. Tenemos la opción perfecta para satisfacer tus gustos y disfrutar al máximo">
     <meta name="keywords" content="bar, tragos, cocteles, pizzas, papas fritas, bebidas, musica, gastronomía">
     <title>Bebidas-Grow</title>
-    <link rel="shortcut icon" href="./assets/img/bar.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/img/bar.ico" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
