--- a/pages/cocteles.html
+++ b/pages/cocteles.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Sumérgete en el mundo de los cocteles en el bar Grow. Nuestro barman crea mezclas únicas que deleitarán tus sentidos. Descubre nuevos sabores y vive una experiencia única.">
     <meta name="keywords" content="bar, tragos, cocteles, pizzas, papas fritas, bebidas, musica, gastronomía">
     <title>Cocteles-Grow</title>
-    <link rel="shortcut icon" href="./assets/img/bar.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/img/bar.ico" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
