--- a/pages/pizzas.html
+++ b/pages/pizzas.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Descubre nuestras pizzas artesanales con ingredientes frescos y sabrosos en el bar Grow. Disfruta de una explosión de sabores en cada porción y déjate cautivar por nuestra variedad de opciones">
     <meta name="keywords" content="bar, tragos, cocteles, pizzas, papas fritas, bebidas, musica, gastronomía">
     <title>Pizzas-Grow</title>
-    <link rel="shortcut icon" href="./assets/img/bar.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/img/bar.ico" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
 </head>
 
