--- a/pages/bebidas.html
+++ b/pages/bebidas.html
@@ -9,6 +9,16 @@
     <title>Bebidas-Grow</title>
     <link rel="shortcut icon" href="../assets/img/bar.ico" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
+
+    <meta property="og:title" content=Bebidas-Grow>
+    <meta property="og:site_name" content=Grow>
+    <meta property="og:url" content=https://grow-ch.000webhostapp.com/pages/bebidas.html>
+    <meta property="og:description" content=>
+    <meta property="og:type" content=restaurant.menu>
+    <meta property="og:image" content=https://grow-ch.000webhostapp.com/assets/img/bebida.jpg>
+
+
+
 </head>
 <body>
     <header class="header-nav">
