--- a/pages/cocteles.html
+++ b/pages/cocteles.html
@@ -9,6 +9,20 @@
     <title>Cocteles-Grow</title>
     <link rel="shortcut icon" href="../assets/img/bar.ico" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
+
+    <meta property="og:title" content=Cocteles-Grow>
+    <meta property="og:site_name" content=Grow>
+    <meta property="og:url" content=https://grow-ch.000webhostapp.com/pages/cocteles.html>
+    <meta property="og:description" content=Sumérgete en el mundo de los cocteles en el bar Grow. Nuestro barman crea mezclas únicas que deleitarán tus sentidos. Descubre nuevos sabores y vive una experiencia única
+    >
+    <meta property="og:type" content=restaurant.menu>
+    <meta property="og:image" content=https://grow-ch.000webhostapp.com/assets/img/coctelinicio.jpg>
+
+
+
+
+
+
 </head>
 <body>
     <header class="header-nav">
