--- a/pages/papas.html
+++ b/pages/papas.html
@@ -4,11 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Descubre nuestras pizzas artesanales con ingredientes frescos y sabrosos en el bar Grow. Disfruta de una explosión de sabores en cada rebanada y déjate cautivar por nuestra variedad de opciones">
+    <meta name="description" content="Deléitate con nuestras irresistibles papas fritas en el bar Grow. Crujientes por fuera, suaves por dentro y acompañadas de deliciosas salsas, nuestras papas fritas te conquistarán.">
     <meta name="keywords" content="bar, tragos, cocteles, pizzas, papas fritas, bebidas, musica, gastronomía">
     <title>Nuestras Papas-Grow</title>
     <link rel="shortcut icon" href="../assets/img/bar.ico" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
+
+    <meta property="og:title" content=Nuestras Papas-Grow>
+    <meta property="og:site_name" content=Grow>
+    <meta property="og:url" content=https://grow-ch.000webhostapp.com/pages/papas.html>
+    <meta property="og:description" content=Deléitate con nuestras irresistibles papas fritas en el bar Grow. Crujientes por fuera, suaves por dentro y acompañadas de deliciosas salsas, nuestras papas fritas te conquistarán.>
+    <meta property="og:type" content=restaurant.menu>
+    <meta property="og:image" content=https://grow-ch.000webhostapp.com/assets/img/papas.jpg>
+
+    
 </head>
 <body>
     <header class="header-nav">
