--- a/pages/pizzas.html
+++ b/pages/pizzas.html
@@ -9,6 +9,16 @@
     <title>Pizzas-Grow</title>
     <link rel="shortcut icon" href="../assets/img/bar.ico" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
+
+    <meta property="og:title" content=Pizzas-Grow>
+    <meta property="og:site_name" content=Grow>
+    <meta property="og:url" content=https://grow-ch.000webhostapp.com/pages/pizzas.html>
+    <meta property="og:description" content=Descubre nuestras pizzas artesanales con ingredientes frescos y sabrosos en el bar Grow. Disfruta de una explosión de sabores en cada rebanada y déjate cautivar por nuestra variedad de opciones>
+    <meta property="og:type" content=restaurant.menu>
+    <meta property="og:image" content=https://grow-ch.000webhostapp.com/assets/img/pizzainicio.jpg>
+
+
+
 </head>
 
 <body>
