--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Grow: Papas, pizzas y cocteles deliciosos en un ambiente acogedor en Coderhouse. Disfruta de una experiencia única con nuestra variada oferta.">
     <meta name="keywords" content="bar, tragos, cocteles, pizzas, papas fritas, bebidas, musica, gastronomía">
+
+    <meta property="og:title" content=Inicio-Grow>
+    <meta property="og:site_name" content=Grow>
+    <meta property="og:url" content=https://grow-ch.000webhostapp.com/index.html>
+    <meta property="og:description" content=Grow: Papas, pizzas y cocteles deliciosos en un ambiente acogedor en Coderhouse. Disfruta de una experiencia única con nuestra variada oferta.>
+    <meta property="og:type" content=restaurant.menu>
+    <meta property="og:image" content=https://grow-ch.000webhostapp.com/assets/img/pizzainicio.jpg>
+
+    
     <title>Inicio-Grow</title>
     <link rel="shortcut icon" href="./assets/img/bar.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
