correcion de opengraph

--- a/pages/bebidas.html
+++ b/pages/bebidas.html
@@ -13,7 +13,7 @@
     <meta property="og:title" content=Bebidas-Grow>
     <meta property="og:site_name" content=Grow>
     <meta property="og:url" content=https://grow-ch.000webhostapp.com/pages/bebidas.html>
-    <meta property="og:description" content=>
+    <meta property="og:description" content=Refresca tu paladar con nuestras gran variedad de bebidas refrescantes. Tenemos la opción perfecta para satisfacer tus gustos y disfrutar al máximo>
     <meta property="og:type" content=restaurant.menu>
     <meta property="og:image" content=https://grow-ch.000webhostapp.com/assets/img/bebida.jpg>
 
